[gd_scene load_steps=2 format=3 uid="uid://d0q6gc5y11cev"]

[ext_resource type="Script" uid="uid://d4en3quaoy136" path="res://death_screen.gd" id="1_58ct5"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58ct5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -38.0
offset_top = -57.0
offset_right = 1945.0
offset_bottom = 1127.0
color = Color(0, 0, 0, 1)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 934.0
offset_top = 180.0
offset_right = 1053.0
offset_bottom = 203.0
text = "Lifetime Score: "

[node name="RestartButton" type="Button" parent="."]
offset_left = 1091.0
offset_top = 403.0
offset_right = 1156.0
offset_bottom = 434.0
text = "Restart"

[node name="MenuButton" type="Button" parent="."]
offset_left = 832.0
offset_top = 405.0
offset_right = 885.0
offset_bottom = 436.0
text = "Menu"

[node name="TotalScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 935.0
offset_top = 209.0
offset_right = 1026.0
offset_bottom = 232.0
text = "Total Score:"

[node name="FogEffect" type="AnimatedSprite2D" parent="."]
